--- a/templates/rink/admin-billing-tools.html
+++ b/templates/rink/admin-billing-tools.html
@@ -35,6 +35,7 @@
             <th></th>
             <th>Name</th>
             <th>Real Name</th>
+            <th>Email</th>
             <th>Balance</th>
         </tr>
     </thead>
@@ -44,6 +45,7 @@
             <td><a href="{% url "rink.views.skater_tools" skater_id=skater.id %}"><i class="icon-pencil"></i></a></td>
             <td>{{ skater.derby_name }}</td>
             <td>{{ skater.first_name }} {{ skater.last_name }}</td>
+            <td>{{ skater.email }}</td>
             <td>${{ skater.balance }}</td>
         </tr>
         {% endfor %}
