Spring 2014 registration changes

--- a/templates/emails/base.html
+++ b/templates/emails/base.html
@@ -15,11 +15,11 @@
 <div style="height:18px;background-color:#35E5F4;"></div>
 <div style="font-family:monospace;font-size:11px;margin:0 auto 0 auto;line-height:95%;width:300px;">
 <pre>   THE MWD SITE ROBOT         __
-  REMINDS YOU TO             \&gt; )
- ENJOY THE NEW               /_/
- LIGHTS AT            ____ /\_)
- FAST FORWARD        /''__Y /
-                     \(&gt;66&lt;/
+  WELCOMES YOU             \&gt; )
+      TO                    /_/
+ MAD                  ____ /\_)
+   WRECKIN'          /''__Y /
+       DOLLS         \(&gt;66&lt;/
                       /\_\_)
                     _/     \__
                    (_\/\      \
