--- a/templates/emails/pre-reg-invite.html
+++ b/templates/emails/pre-reg-invite.html
@@ -3,15 +3,30 @@
 <br>
 Hello {{ skater_short_name }},<br>
 <br>
-Here is your link to register for the 2014 Spring session. Please fill out the required information and submit payment by February 8, 2014. You will receive a confirmation email after the form is completed.<br>
+You have been invited to join the Mad Wreckin’ Dolls for their Spring 2014 session.<br>
+<br>
+Here is the link to register for the 2014 Spring session. Please fill out the required information and submit payment by March 1, 2014. You will receive a confirmation email after the form is completed.<br>
 <br>
 <div style="font-size:20px;font-weight:bold;">
     <a href="https://madwreckindolls.com/registration/{{ skater.id }}/{{ skater.user_hash }}">Click Here to Register!</a>
 </div>
 <br>
-If you are trying out for the mid season draft and want to skate with MWD if you do not get drafted, you will need to register now. You must notify Audi after the draft if you are not going to participate to get a full refund.<br>
+Please remember to not purchase any gear until you have attended a gear talk or have talked with Dude (<a href="mailto:fganson@gmail.com">fganson@gmail.com</a>). You will need to purchase a mouthguard by your first practice. We will be allowing gear to be borrowed for the first 2 weeks of practice. Skates will be available for the whole session.<br>
 <br>
-If you have any questions or any problems with the form, please email Audi at <a href="mailto:finance@madwreckindolls.com">finance@madwreckindolls.com</a>.<br>
+If you have any prior derby experience and want to try to test into a level higher than 101, please contact Red and Dex at training@madwreckindolls.com. Assessment are currently scheduled for February 25 and 27. Please contact them ASAP for information or to find an alternate time.<br>
+<br>
+<b>Important Dates:</b><br>
+<b>Sunday 3/16:</b> All League Meeting: 6-9, location TBD<br>
+<b>Saturday 3/22:</b> Start of the Fall Session: 101 will be practicing 7:00-9:00, doors open at 6:45. There will be 30 minutes strength after skating for 90 minutes so please bring tennis shoes.<br>
+<br>
+<b>Important Emails:</b><br>
+<b>For Information:</b> <a href="mailto:information@madwreckindolls.com">information@madwreckindolls.com</a><br>
+<b>Manager (Beaker):</b> <a href="mailto:manager@madwreckindolls.com">manager@madwreckindolls.com</a><br>
+<b>Events (Smite):</b> <a href="mailto:events@madwreckindolls.com">events@madwreckindolls.com</a><br>
+<b>Training (Dex & Red):</b> <a href="mailto:training@madwreckindolls.com">training@madwreckindolls.com</a><br>
+<b>Finance/Membership (Audi):</b> <a href="mailto:finance@madwreckindolls.com">finance@madwreckindolls.com</a><br>
+<br>
+If you have any questions or any problems with the form, please email Audi at <a href="mailto:finance@madwreckindolls.com">finance@madwreckindolls.com.</a><br>
 <br>
 <b>The Auditor</b><br>
 Finance &amp; Membership Chair<br>
