--- a/templates/emails/pre-reg-invite.html
+++ b/templates/emails/pre-reg-invite.html
@@ -3,9 +3,9 @@
 <br>
 Hello {{ skater_short_name }},<br>
 <br>
-You have been invited to join the Mad Wreckin’ Dolls for their Spring 2014 session.<br>
+You have been invited to join the Mad Wreckin’ Dolls for their Fall 2014 session.<br>
 <br>
-Here is the link to register for the 2014 Spring session. Please fill out the required information and submit payment by March 1, 2014. You will receive a confirmation email after the form is completed.<br>
+Here is the link to register for the 2014 Fall session. Please fill out the required information and submit payment by September 13, 2014. You will receive a confirmation email after the form is completed.<br>
 <br>
 <div style="font-size:20px;font-weight:bold;">
     <a href="https://madwreckindolls.com/registration/{{ skater.id }}/{{ skater.user_hash }}">Click Here to Register!</a>
@@ -15,9 +15,12 @@ Please remember to not purchase any gear until you have attended a gear talk or 
 <br>
 If you have any prior derby experience and want to try to test into a level higher than 101, please contact Red and Dex at training@madwreckindolls.com. Assessment are currently scheduled for February 25 and 27. Please contact them ASAP for information or to find an alternate time.<br>
 <br>
+Practice for 101 skaters will be on Tuesdays from 4:30-6:30 with doors opening at 4:15 and Saturdays from 7:00-9:00 am with doors opening at 6:45.<br>
+<br>
 <b>Important Dates:</b><br>
-<b>Sunday 3/16:</b> All League Meeting: 6-9, location TBD<br>
+<b>Sunday 3/16:</b> All League Meeting: 6-9, All League Meeting: 6-8, location at Badger Bowl (506 E Badger Rd, Madison, WI 53713). There is an option for bowling before hand from 4-6. The cost is $5 per person with the max of 5 people per lane. If you are interested in attending, please <a href="https://docs.google.com/forms/d/1ppleqp7p0H99gph67X0mCi0DndlpaE2rpZpdMM-s5nk/viewform">sign up here.</a><br>
 <b>Saturday 3/22:</b> Start of the Fall Session: 101 will be practicing 7:00-9:00, doors open at 6:45. There will be 30 minutes strength after skating for 90 minutes so please bring tennis shoes.<br>
+<b>Sunday 3/23:</b> Make up 101 practice: There will be a practice for 101 skaters from 8:00 - 10:00 am. Doors open at 7:45.<br>
 <br>
 <b>Important Emails:</b><br>
 <b>For Information:</b> <a href="mailto:information@madwreckindolls.com">information@madwreckindolls.com</a><br>
