--- a/templates/emails/pre-reg-invite.html
+++ b/templates/emails/pre-reg-invite.html
@@ -5,7 +5,7 @@ Hello {{ skater_short_name }},<br>
 <br>
 You have been invited to join the Mad Wreckin’ Dolls for their Fall 2014 session.<br>
 <br>
-Here is the link to register for the 2014 Fall session. Please fill out the required information and submit payment by September 13, 2014. You will receive a confirmation email after the form is completed.<br>
+Here is the link to register for the 2014 Fall session. Please fill out the required information and submit payment by October 4, 2014. You will receive a confirmation email after the form is completed.<br>
 <br>
 <div style="font-size:20px;font-weight:bold;">
     <a href="https://madwreckindolls.com/registration/{{ skater.id }}/{{ skater.user_hash }}">Click Here to Register!</a>
@@ -13,23 +13,23 @@ Here is the link to register for the 2014 Fall session. Please fill out the requ
 <br>
 Please remember to not purchase any gear until you have attended a gear talk or have talked with Dude (<a href="mailto:fganson@gmail.com">fganson@gmail.com</a>). You will need to purchase a mouthguard by your first practice. We will be allowing gear to be borrowed for the first 2 weeks of practice. Skates will be available for the whole session.<br>
 <br>
-If you have any prior derby experience and want to try to test into a level higher than 101, please contact Red and Dex at training@madwreckindolls.com. Assessment are currently scheduled for February 25 and 27. Please contact them ASAP for information or to find an alternate time.<br>
+If you have any prior derby experience and want to try to test into a level higher than 101, please contact Red and Dex at <a href="mailto:training@madwreckindolls.com">training@madwreckindolls.com</a>.<br>
 <br>
-Practice for 101 skaters will be on Tuesdays from 4:30-6:30 with doors opening at 4:15 and Saturdays from 7:00-9:00 am with doors opening at 6:45.<br>
+Practice for 101 skaters will be on Wednesdays from 4:30-6:30 pm with doors opening at 4:15 and Saturdays from 4:30-6:30 pm with doors opening at 4:15.<br>
 <br>
 <b>Important Dates:</b><br>
-<b>Sunday 3/16:</b> All League Meeting: 6-9, All League Meeting: 6-8, location at Badger Bowl (506 E Badger Rd, Madison, WI 53713). There is an option for bowling before hand from 4-6. The cost is $5 per person with the max of 5 people per lane. If you are interested in attending, please <a href="https://docs.google.com/forms/d/1ppleqp7p0H99gph67X0mCi0DndlpaE2rpZpdMM-s5nk/viewform">sign up here.</a><br>
-<b>Saturday 3/22:</b> Start of the Fall Session: 101 will be practicing 7:00-9:00, doors open at 6:45. There will be 30 minutes strength after skating for 90 minutes so please bring tennis shoes.<br>
-<b>Sunday 3/23:</b> Make up 101 practice: There will be a practice for 101 skaters from 8:00 - 10:00 am. Doors open at 7:45.<br>
+<b>Sunday 10/12:</b> All League Meeting: 6:00-8:00 pm, location at Badger Bowl (<a href="https://goo.gl/maps/XJ6p6">506 E Badger Rd, Madison, WI 53713</a>). There is an option for bowling before hand from 4:00-6:00 pm. The cost is $5 per person with the max of 5 people per lane. If you are interested in attending, please <a href="https://docs.google.com/forms/d/10smmWpRHO-HyclkIrE-ZYwJu0mNB7vqCdAL6m1pa3_o/viewform">sign up here.</a><br>
+<b>Wednesday 10/15:</b> Start of the Fall Session: 101 will be practicing 4:30-6:30 pm, doors open at 4:15pm. Please bring tennis shoes to every practice for possible off skates strength.<br>
+<b>Saturday 10/25:</b> Fall Welcome Party: 7:00-11:00 pm at the Brass Ring (<a href="https://goo.gl/maps/KRx9Y">701 E Washington Ave, Madison, WI 53703</a>) in the upstairs mezzanine. We will be providing light appetizers; the Brass Ring will have its full food and drink menu. <b>T-shirt decorating!</b> We will be providing craft supplies to decorate T shirts. Please bring your own shirt. Now is also a great time to get rid of any blue or yellow shirts that no longer fit!<br>
 <br>
 <b>Important Emails:</b><br>
 <b>For Information:</b> <a href="mailto:information@madwreckindolls.com">information@madwreckindolls.com</a><br>
 <b>Manager (Beaker):</b> <a href="mailto:manager@madwreckindolls.com">manager@madwreckindolls.com</a><br>
-<b>Events (Smite):</b> <a href="mailto:events@madwreckindolls.com">events@madwreckindolls.com</a><br>
-<b>Training (Dex & Red):</b> <a href="mailto:training@madwreckindolls.com">training@madwreckindolls.com</a><br>
+<b>Events (Lux + Tusions):</b> <a href="mailto:events@madwreckindolls.com">events@madwreckindolls.com</a><br>
+<b>Training (Dex + Red):</b> <a href="mailto:training@madwreckindolls.com">training@madwreckindolls.com</a><br>
 <b>Finance/Membership (Audi):</b> <a href="mailto:finance@madwreckindolls.com">finance@madwreckindolls.com</a><br>
 <br>
-If you have any questions or any problems with the form, please email Audi at <a href="mailto:finance@madwreckindolls.com">finance@madwreckindolls.com.</a><br>
+If you have any questions or any problems with the registration form, please email Audi at <a href="mailto:finance@madwreckindolls.com">finance@madwreckindolls.com.</a><br>
 <br>
 <b>The Auditor</b><br>
 Finance &amp; Membership Chair<br>
