--- a/templates/emails/new_invoice.html
+++ b/templates/emails/new_invoice.html
@@ -3,9 +3,7 @@
 <br>
 Hello {{ skater_short_name }},<br>
 <br>
-<b>Whoops! Apologies to those who may have got a confusing email with a zero balance and being inactive. Please disregard it!</b> This email should be correct. Please relpy if you have any questions.<br>
-<br>
-MWD Second Summer 2014 Session dues payments are due on Monday, August 11th.
+MWD February dues payments are due on Monday, February 2nd.
 {% if skater.balance > 0 %}
 Your balance is <b>${{ skater.balance }}</b>.<br>
 {% else %}
@@ -27,7 +25,7 @@ If you do not know your password for the online payment system you can <a href="
 
 <br>
 <br>
-If chose not to pay online, you can pay The Auditor in person with cash, checks, or credit card. You can also mail a check to The Auditor. Additionally, there is also a MWD mailbox located at The Auditor's, you can place an envelope with your name and payment (cash or check).<br>
+If chose not to pay online, you can pay The Auditor in person with cash, checks, or credit card. You can also mail a check to The Auditor.<br>
 <br>
 Checks should be made payable to <b>Mad Wreckin' Dolls</b> or <b>MWD</b>.<br>
 <br>
