--- a/templates/emails/pre-reg-invite-simple.html
+++ b/templates/emails/pre-reg-invite-simple.html
@@ -3,18 +3,17 @@
 <br>
 Hello {{ skater_short_name }},<br>
 <br>
-Here is your link to register for the 2014 Fall session. Please fill out the required information and submit payment by September 13, 2014. You will receive a confirmation email after the form is completed.<br>
+Here is your link to register for the 2015 Spring session. Please fill out the required information and submit payment by February 2nd, 2015. You will receive a confirmation email after the form is completed.<br>
 <br>
 <div style="font-size:20px;font-weight:bold;">
     <a href="https://madwreckindolls.com/registration/{{ skater.id }}/{{ skater.user_hash }}">Click Here to Register!</a>
 </div>
 <br>
-If you are trying out for the draft and want to skate with MWD if you do not get drafted, <b>you will need to register now</b>. You must notify Audi after the draft if you are not going to participate to get a full refund.<br>
 <br>
 If you have any questions or any problems with the form, please email Audi at <a href="mailto:finance@madwreckindolls.com">finance@madwreckindolls.com</a>.<br>
 <br>
 <b>The Auditor</b><br>
-Finance &amp; Membership Chair<br>
+Membership Chair<br>
 Mad Wreckin Dolls<br>
 <br>
 
