--- a/templates/emails/new_invoice.html
+++ b/templates/emails/new_invoice.html
@@ -3,7 +3,7 @@
 <br>
 Hello {{ skater_short_name }},<br>
 <br>
-MWD February dues payments are due on Monday, February 2nd.
+MWD June dues payments are due on Friday, June 5th.
 {% if skater.balance > 0 %}
 Your balance is <b>${{ skater.balance }}</b>.<br>
 {% else %}
@@ -31,8 +31,8 @@ Checks should be made payable to <b>Mad Wreckin' Dolls</b> or <b>MWD</b>.<br>
 <br>
 Mad Wreckin' Dolls<br>
 c/o Heidi Silvers<br>
-1 Loretta Ct<br>
-Madison, WI 53716<br>
+702 Weald Bridge Rd<br>
+Cottage Grove, WI 53527<br>
 <br>
 Thanks!<br>
 <br>
