--- a/templates/surveys/base.html
+++ b/templates/surveys/base.html
@@ -16,6 +16,9 @@
 
 <script type="text/javascript">
 
+  {% block javascript %}
+  {% endblock %}
+
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-37148332-1']);
   _gaq.push(['_setDomainName', 'madwreckindolls.com']);
@@ -53,11 +56,20 @@ html, body {
         background-color: #f5f5f5;
 }
 
-
-
 .header {
     text-align: center;
     margin-bottom: 42px;
+
+    background-color: #f9fc69;
+    height: 88px;
+    width: 500px;
+    margin: -1px auto 32px auto;
+
+    border-bottom-left-radius: 60px;
+    border-bottom-right-radius: 60px;
+    -moz-box-shadow: 2px 5px 6px #888;
+    -webkit-box-shadow: 2px 5px 6px #888;
+    box-shadow: 2px 5px 6px #888;
 }
 
 .reg-line1, .reg-line2 {
@@ -76,49 +88,6 @@ html, body {
 
 .reg-line2 {
     font-size: 57px;
-}
-
-.header {
-    background-color: #f9fc69;
-    height: 88px;
-    width: 500px;
-    margin: -1px auto 32px auto;
-
-    border-bottom-left-radius: 60px;
-    border-bottom-right-radius: 60px;
-    -moz-box-shadow: 2px 5px 6px #888;
-    -webkit-box-shadow: 2px 5px 6px #888;
-    box-shadow: 2px 5px 6px #888;
-}
-
-#div_id_derby_name {
-    margin-top: 50px;
-}
-
-#id_allergies {
-    width:100%;
-    height: 100px;
-}
-
-#div_id_code_of_conduct div.controls,
-#div_id_wftda div.controls,
-#div_id_mwd div.controls,
-#div_id_mrd div.controls {
-    margin-left:0;
-}
-
-#div_id_code_of_conduct div.controls textarea,
-#div_id_wftda div.controls textarea,
-#div_id_mwd div.controls textarea,
-#div_id_mrd div.controls textarea {
-    width: 98%;
-    height: 320px;
-    font-size: 9pt;
-    margin-top:20px;
-}
-
-#div_id_code_of_conduct_agree div {
-    margin-left: 100px;;
 }
 
 .turq {
@@ -146,150 +115,31 @@ h1 {
     padding-left: 6px;
 }
 
-.step {
-    border-bottom: 1px dotted #eaeaea;
-    text-transform: uppercase;
-    color: #8e8e8e;
-    letter-spacing: 2.3pt;
-    margin: -33px 8px 30px 8px;
-    text-align: right;
-    width: 550px;
-    font-size: smaller;
-}
-
 .help-block {
     font-size: smaller;
-}
-
-.asteriskField {
-    display: none;
 }
 
 #button-id-button {
     margin-right: 20px;
 }
 
-/* STEP ONE */
-
-#div_id_derby_number {
-    margin-bottom: 50px;
+h1 {
+    font-size: 24px;
 }
 
-#div_id_first_name {
-    margin-top: 50px;
+h2 {
+    font-size: 16px;
+    border-top: 1px dotted #eaeaea;
 }
 
-#id_dob {
-    width: 75px;
-}
-
-#id_zip {
-    width: 80px;
-}
-
-/* STEP TWO */
-
-#div_id_wftda_confirm {
-    margin-top: 60px;
-}
-
-#div_id_insurance_company {
-    margin-top: 60px;
-}
-
-/* STEP THREE POINT FIVE */
-
-#id_anything_else_registration {
-    width: 100%;
-}
-
-
-/* STEP FOUR */
-
-input[type="radio"] {
-    margin: 0 8px 0;
-}
-
-.payment_div {
-    margin-bottom: 20px;
-}
-
-.skater-info, .due-date {
-    margin-bottom: 10px;
-    font-size: larger;
-}
-
-.skater-info span {
-    font-weight: bold;
-}
-
-.due-date {
-    font-weight: bold;
-}
-
-.hide {
-    display: none;
+.survey-description {
+    margin: 10px 0 10px 0;
 }
 
 </style>
 
-<script type="text/javascript">
-
-$(document).ready(function() {
-    $('#button-id-button').click(function() { window.history.go(-1) });
-
-    $('#id_dob').datepicker({ 
-            format: "yyyy/mm/dd", 
-            changeMonth: true,
-            changeYear: true,
-            yearRange: "-70:+0"
-    });
-
-    if($('#id_anything_else_registration'))
-    {
-        $('.form-actions').css('text-align', 'center');
-    }
-
-    if($('#div_id_code_of_conduct_agree'))
-    {
-        $('div.form-action').css('padding-left', '0px');
-    }
-
-    if($('#div_id_wftda_confirm')) {
-        // Select YES if WFTDA number is populated.
-        if($('#div_id_wftda_number').val() != '')
-            $('input:radio[name="wftda_confirm"]').filter('[value="yes"]').attr('checked', true);
-
-        $('input:radio[name="wftda_confirm"]').click(function() {
-            $('#id_wftda_number').focus();
-        });
-    }
-
-    if($('#div_id_first_aid_certified')) {
-      $('#div_id_first_aid_certified input').click(function() { 
-        if( ($(this).attr("value")) == "True" ) {
-          $('#div_id_first_aid_volunteer').show();
-        } else {
-          $('#div_id_first_aid_volunteer').hide();
-        }
-      });
-      
-      $('#div_id_first_aid_certified input').click();
-    }
-
-
-
-
-    // Legal form textarea
-    $('#id_mwd').attr("readonly", "readonly");
-    $('#id_mrd').attr("readonly", "readonly");
-
-});
-
-</script>
-
-
 {% block head %}{% endblock %}
+
 </head>
 <body>
  <div id="wrap">
@@ -310,23 +160,11 @@ $(document).ready(function() {
         <div class="content"> 
             <div class="row">
 
-<h1>{{ step_info }}</h1>
-
-
-                <!-- begin step block -->
-
-{% block step %}{% endblock %}
-
-                <!-- end step block -->
-
-
-
                 <!-- begin content block -->
 
 {% block content %}{% endblock %}
  
                 <!-- end content block-->
-
 
             </div>
         </div>
