Vote invite backend, email template, fixes, fixes, fixes

--- a/templates/rink/base.html
+++ b/templates/rink/base.html
@@ -110,7 +110,7 @@
               {% if user.is_authenticated %}
               {% if user.is_admin %}
               <li><a href="{% url "rink.views.admin_tools" %}">Finance</a></li>
-              <li><a href="{% url "rink.views.survey_tools" %}">Surveys</a></li>
+              <li><a href="{% url "rink.views.survey_stats" %}">Surveys</a></li>
               &nbsp;&nbsp;&nbsp;
               {% endif %}
               <li><a href="{% url "rink.views.dues" %}">Pay Dues</a></li>
