Fix URL in invite script

--- a/templates/emails/survey_invite.html
+++ b/templates/emails/survey_invite.html
@@ -3,10 +3,10 @@
 <br>
 Hello {{ skater_short_name }},<br>
 <br>
-You have been invited to vote for <strong>"{{ survey }}"</strong>.
+You have been invited to vote for <strong>"{{ survey }}"</strong>.<br>
 <br>
 <div style="font-size:20px;font-weight:bold;">
-    <a href="{{ survey.get_url }}">Click Here to Vote!</a>
+    <a href="{{ invite.get_url }}">Click Here to Vote!</a>
 </div>
 <br>
 Click the link above to vote. Let us know if you run into any issues.<br>
