Survey -> Voting, Update URL

--- a/templates/surveys/base.html
+++ b/templates/surveys/base.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=650">
 
-<title>{% block title %}MWD Surveys{% endblock %}</title>
+<title>{% block title %}MWD Voting{% endblock %}</title>
 
 <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/themes/base/jquery-ui.css" type="text/css">
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
@@ -154,7 +154,7 @@ h2 {
                 MAD WRECKIN' DOLLS
                 <span>&#9733;</span>
             </div>
-            <div class="reg-line2">SURVEY</div>
+            <div class="reg-line2">VOTING</div>
         </div>
 
         <div class="content"> 
