--- a/templates/surveys/survey.html
+++ b/templates/surveys/survey.html
@@ -1,6 +1,6 @@
 {% extends "surveys/base.html" %}
 
-{% block title %}MWD Survey - {{ survey.name }}{% endblock %}
+{% block title %}MWD Voting - {{ survey.name }}{% endblock %}
 
 
 <!-- start content -->
